<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cmpt371project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="selectlanguage">Selete Language</string>
    <string name="userName">Username</string>
    <string name="userNameHint">username</string>
    <string name="passwordHint">password</string>
    <string name="passWord">Password</string>
    <string name="logIn">Log in</string>
    <string name="update">Update</string>
</resources>
